fixed scrollbar height. fixed desktop  nav on classrom view page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,7 @@ body {
   /* Adjust styles according to your design */
   ::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
   }
   
   ::-webkit-scrollbar-thumb {
